# pcl-pose-estimation

./: .pre-commit-config.yaml  README.md  config.yaml  data.py  data_preprocessing.py  estimate_variance_proxy.py  main.py  model.py  preprocessing.yaml  pyproject.toml  training.py
pcl_pose_estimation/: data.py  io.py  model.py  residual_model.py  torch_migration.py  training.py  utils.py  voxnet_model.py  voxnet_model_torch.py
test/: test_basic.py  test_data.py  test_migrate_torch.py
